@startuml
interface TextTransformerInterface {
    +String transform(String text)
}

abstract class TextTransformer implements TextTransformerInterface {
    -TextTransformerInterface transformer
    +TextTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class UppercaseTransformer extends TextTransformer {
    +UppercaseTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class LowercaseTransformer extends TextTransformer {
    +LowercaseTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class CapitalizeTransformer extends TextTransformer {
    +CapitalizeTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class AbbreviateTransformer extends TextTransformer {
    +AbbreviateTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class ExpandTransformer extends TextTransformer {
    +ExpandTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class InverseTransformer extends TextTransformer {
    +InverseTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class RemoveDuplicatesTransformer extends TextTransformer {
    +RemoveDuplicatesTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class LatexTransformer extends TextTransformer {
    +LatexTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class NumberToTextTransformer extends TextTransformer {
    +NumberToTextTransformer(TextTransformerInterface transformer)
    +String transform(String text)
}

class BaseTransformer implements TextTransformerInterface {
    +String transform(String text)
}

class TransformerFactory {
    +TextTransformerInterface createTransformer(String[] transforms)
}

class FormattedTextTransformerController {
    +ResponseEntity<String> postJson(TransformRequest request)
}

class TextTransformerController {
    +ResponseEntity<String> get(String text, String[] transforms)
}

class TransformRequest {
    -String text
    -String[] transforms
    +String getText()
    +void setText(String text)
    +String[] getTransforms()
    +void setTransforms(String[] transforms)
}

TextTransformerInterface <|-- TextTransformer
TextTransformer <|-- UppercaseTransformer
TextTransformer <|-- LowercaseTransformer
TextTransformer <|-- CapitalizeTransformer
TextTransformer <|-- AbbreviateTransformer
TextTransformer <|-- ExpandTransformer
TextTransformer <|-- InverseTransformer
TextTransformer <|-- RemoveDuplicatesTransformer
TextTransformer <|-- LatexTransformer
TextTransformer <|-- NumberToTextTransformer
TextTransformerInterface <|.. BaseTransformer
TransformerFactory --> TextTransformerInterface
FormattedTextTransformerController --> TransformRequest
FormattedTextTransformerController --> TransformerFactory
TextTransformerController --> TransformerFactory
@enduml
